Fix the white space aabove the book container

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .app {
   display: flex;
   height: 100vh;
